--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@trpc/react": "^9.26.2",
     "@trpc/server": "^9.26.2",
     "next": "12.2.3",
+    "pokenode-ts": "^1.16.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
